# DevOps-Course-Starter

./: .dockerignore  .env.devtest  .env.public  .env.template  .env.test  .flaskenv  .flaskenv.test  .gitignore  Dockerfile  Dockerfile.cypress  README.md  Vagrantfile  cypress.config.js  cypress.env.template.json  docker-compose.cypress.yml  docker-compose.development.yml  docker-compose.local.yml  docker-compose.pytest.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml  ci-pipeline.yml  ci.yml
ansible/: inventory.ini  playbook.yml  todo-app.service  todo-app.socket
ansible/templates/: .env.j2
cypress/e2e/: index.cy.js
cypress/support/: commands.js  e2e.js
docker/: Dockerfile  Dockerfile.cypress  docker-compose.cypress.yml  docker-compose.local.yml  docker-compose.pytest.yml  docker-compose.yml
terraform/: .terraform.lock.hcl  azurerm.tfbackend.template  generate_backend_config.py  main.tf  outputs.tf  variables.tf
terraform/templates/: azurerm.tfbackend.j2
tests/integration/: test_app_routes.py
tests/unit/: test_items_view_model.py
todo_app/: app.py  flask_config.py
todo_app/blueprints/: oauth.py
todo_app/data/: session_items.py  trello_items.py
todo_app/helpers/: decorators.py  trello_helpers.py
todo_app/models/data/: item.py
todo_app/models/view/: items.py  items_view_model.py
todo_app/repositories/: item_repo.py
todo_app/templates/: index.html  layout.html  login.html
todo_app/tests/integration/: test_app_routes.py
vagrant/: Vagrantfile
(+1 files in other folders)
