[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple to-do app"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.14.0"
flask = "^1.1.2"
pymongo = "^4.5.0"
pytest = "^7.1.3"
mongomock = "^4.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
