[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple to-do app"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
flask-dance = "^7.0.1"
pymongo = "^4.5.0"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
